<resources>
    <string name="app_name">ProjectApp</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_assessment_screen">ASSESSMENT</string>
    <string name="seekBarAppetite">APPETITE</string>
    <string name="seekBarFatigue">FATIGUE</string>
    <string name="seekBarIllness">ILLNESS</string>
    <string name="seekBarMood">MOOD</string>
    <string name="seekBarMotivation">MOTIVATION</string>
    <string name="seekBarNutrition">NUTRITION</string>
    <string name="seekBarRecovery">RECOVERY</string>
    <string name="seekBarSleep">SLEEP</string>
    <string name="seekBarSoreness">SORENESS</string>
    <string name="seekBarStress">STRESS</string>

    <string name="weight">WEIGHT</string>
    <string name="weightKg">KG</string>
    <string name="weightG">g</string>
    <string name="calories">CALORIES</string>
    <string name="protein">PROTEIN</string>
    <string name="carbs">CARBS</string>
    <string name="fats">FATS</string>

    <string name="title_activity_sleep_analysis_screen">SLEEP ANALYSIS</string>
    <string name="title_activity_wake_up_screen">WAKE UP</string>
    <string name="title_activity_sleep_screen">SLEEP</string>
    <string name="title_activity_sleeping_screen">SLEEPING</string>

    <string name="title_activity_analysis_screen">ANALYSIS</string>
    <string name="title_activity_nutrition_screen">NUTRITION</string>

    <string name="title_activity_injury_screen">INJURY</string>
    <string name="buttonAddInjury">ADD INJURY</string>
    <string name="title_activity_side_menu">sideMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_test_screen">TEST</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="startTap">Press TAP to start</string>

    <string name="title_activity_open_cv">OpenCvActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_score_screen">ScoreScreen</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!-- RECOMENDATIONS -->
    <string name="appetitie_worse">appetitie_worse</string>
    <string name="appetitie_better">appetitie_better</string>
    <string name="mood_worse">mood_worse</string>
    <string name="mood_better">mood_better</string>
    <string name="illness_worse">illness_worse</string>
    <string name="illness_better">illness_better</string>
    <string name="motivation_worse">motivation_worse</string>
    <string name="motivation_better">motivation_better</string>
    <string name="nutrition_worse">nutrition_worse</string>
    <string name="nutrition_better">nutrition_better</string>
    <string name="soreness_worse">soreness_worse</string>
    <string name="soreness_better">soreness_better</string>
    <string name="stress_worse">stress_worse</string>
    <string name="stress_better">stress_better</string>
    <string name="taps_worse">taps_worse</string>
    <string name="taps_better">taps_better</string>
    <string name="grip_worse">grip_worse</string>
    <string name="grip_better">grip_better</string>
    <string name="ft_worse">ft_worse</string>
    <string name="ft_better">ft_better</string>
    <string name="ct_worse">ct_worse</string>
    <string name="ct_better">ct_better</string>
    <string name="weight_worse">weight_worse</string>
    <string name="weight_better">weight_better</string>
    <string name="calories_worse">calories_worse</string>
    <string name="calories_better">calories_better</string>
    <string name="protein_worse">protein_worse</string>
    <string name="protein_better">protein_better</string>
    <string name="carbs_worse">carbs_worse</string>
    <string name="carbs_better">carbs_better</string>
    <string name="fat_worse">fat_worse</string>
    <string name="fat_better">fat_better</string>

</resources>
